--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                  name: 'variant1',
                  'experiment1_text': 'I dare you to click the button',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \"Yea it does nothing...\'); alert(\'Thanks!\');">'
+                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'The button does nothing...\');">'
              },
              {
                  name: 'variant2',
                  'experiment1_text': "Bet you can't click the button",
                  'experiment1_button':
-                       '<input type="button" value="Click me" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Congrats, you clicked a button that does nothing.\');">'
+                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Congrats, you clicked a button that does nothing.\');">'
              }
          ]
      });
